# sp_vision

./: CMakeLists.txt
calibration/: capture.cpp
docs/: JETSON_QUICKSTART.md  jetson_orin_nx_setup.md
io/dm_imu/: PROTOCOL_14BYTE.md  dm_imu.cpp  find_imu_packets.py
io/dm_imu(old)/: dm_imu.cpp  dm_imu.hpp
scripts/: install_ceres.sh  jetson_quick_setup.sh  run_demo.sh
src/: auto_buff_debug.cpp  mt_auto_aim_debug.cpp  mt_standard.cpp  sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  sentry_multithread.cpp  standard.cpp  uav.cpp  uav_debug.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.hpp  classifier.cpp  classifier.hpp  detector.cpp
tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp  mt_detector.cpp  mt_detector.hpp
tasks/auto_aim/yolos/: tensorrt_infer.cpp  tensorrt_infer.hpp  yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
tasks/auto_buff/: CMakeLists.txt  tensorrt_infer.cpp  tensorrt_infer.hpp  yolo11_buff.cpp  yolo11_buff.hpp
tasks/omniperception/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/: camera_thread_test.cpp  dm_test.cpp  gimbal_response_test.cpp  handeye_test.cpp
tmp/: label.txt
tools/: thread_safe_queue.hpp
